added the text description and video items

--- a/style.css
+++ b/style.css
@@ -33,7 +33,40 @@ li a{cursor:pointer;
     color:black;
     text-decoration: none;
 }
+#products-list{
+    display: flex;
+}
+.video-item-con img{
+    /*for the video image*/
+    width:120px;
+    height: 120px;
+}
 .video-item-con{
-    border: solid 1px black;
-    padding: 15px;
+    border-radius:5px;
+    margin:5px;
+    border: solid 1px #00000077;
+    padding: 10px;
+    text-decoration: none;
+}
+.product-title{
+    color:black;
+}
+.product-price-light{
+    color:#B6B6B6;
+    margin: 0px 0px 2px 0px;
+
+}
+.product-price-bold{
+    color:black;
+}
+.product-saving{
+    color: #529448;
+}
+.product-saving,.product-price-light,.product-price-bold{
+    font-size:12px;
+    display: block;
+}
+.text-highlighted{
+    text-decoration: underline;
+    text-underline-color: #A9A9A9;
 }
