--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ body,header{padding: 0px}
     text-decoration: underline;
 }
 #top-header-area{
-    display: table;
+    display: flex;
+    align-items: center;
     font-weight: bold;
     font-size: 17px;
 }
@@ -14,7 +15,6 @@ body,header{padding: 0px}
     height:70px;
 }
 #navigation_containner,#logo{
-    display: table-cell;
     vertical-align: middle;
     padding-right: 20px;
 }
@@ -35,6 +35,7 @@ li a{cursor:pointer;
 }
 #products-list{
     display: flex;
+    align-items: center;
 }
 .video-item-con img{
     /*for the video image*/
